--- a/07_FLASK_FORM/templates/user_maintenance.html
+++ b/07_FLASK_FORM/templates/user_maintenance.html
@@ -40,14 +40,14 @@
           </tr>
         </thead>
         <tbody>
-          {% for user in users %}
+          {% for user in users.items %}
           <tr>
             <td>{{ user.id }}</td>
             <td>{{ user.username }}</td>
             <td>{{ user.email }}</td>
             <td>{{ user.administrator }}</td>
-            <td><a href="#" class="stretched-link">ブログ管理数</a></td>
-            <td><a href="#" class="btn btn-secondary">変更</a></td>
+            <td><a href="#">ブログ管理数</a></td>
+            <td><a href="{{ url_for('account', user_id=user.id) }}" class="btn btn-secondary">変更</a></td>
           </tr>
           {% endfor %}
         </tbody>
@@ -58,9 +58,21 @@
   <section id="pagenation">
     <nav aria-label="mantenance_page_navigation">
       <ul class="pagination my-3 justify-content-center">
-        <li class="page-item"><a class="page-link" href="#">前へ</a></li>
-        <li class="page-item"><a class="page-link" href="#">ページ No</a></li>
-        <li class="page-item"><a class="page-link" href="#">次へ</a></li>
+        <li {% if users.has_prev %}class="page-item"{% else %}class="page-item disabled"{% endif %}><a class="page-link" href="{% if users.has_prev %}{{url_for('user_maintenance', page=users.prev_num) }}{% else %}#{% endif %}">前へ</a></li>
+
+        {% for page_num in users.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+          {% if page_num %}
+            {% if users.page == page_num %}
+              <li class="page-item disabled"><a class="page-link" href="#">{{ page_num }}</a></li>
+            {% else %}
+              <li class="page-item"><a class="page-link" href="{{url_for('user_maintenance', page=page_num)}}">{{ page_num }}</a></li>
+            {% endif %}
+          {% else %}
+            <li class="page-item disabled"><a class="page-link" href="#">&hellip;</a></li>
+          {% endif %}
+        {% endfor %}
+        
+        <li {% if users.has_next %}class="page-item"{% else %}class="page-item disabled"{% endif %}><a class="page-link" href="{% if users.has_next %}{{url_for('user_maintenance', page=users.next_num) }}{% else %}#{% endif %}">次へ</a></li>
       </ul>
     </nav>
   </section>
