--- a/07_FLASK_FORM/templates/base.html
+++ b/07_FLASK_FORM/templates/base.html
@@ -47,12 +47,14 @@
           <li class="nav-item px-2">
             <a class="nav-link" href="{{url_for('user_maintenance')}}">ユーザー</a>
           </li>
+          {% if current_user.is_authenticated %}
           <li class="nav-item px-2">
-            <a class="nav-link" href="#">ログアウト</a>
+            <a class="nav-link" href="{{url_for('logout')}}">ログアウト</a>
           </li>
           <li class="navbar-text px-2">
-            ユーザ名
+            {{ current_user.username }}
           </li>
+          {% endif %}
         </ul>
       </div>
     </div>
