--- a/09_flask_app/company_blog/templates/base.html
+++ b/09_flask_app/company_blog/templates/base.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#">ブログ</a>
           </li>
           <li class="nav-item px-2">
-            <a class="nav-link" href="#">カテゴリ</a>
+            <a class="nav-link" href="{{url_for('main.category_maintenance')}}">カテゴリ</a>
           </li>
           <li class="nav-item px-2">
             <a class="nav-link" href="#">お問い合わせ</a>
