ブログ管理関連ページ作成

--- a/09_flask_app/company_blog/templates/base.html
+++ b/09_flask_app/company_blog/templates/base.html
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse justify-content-md-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item px-2">
-            <a class="nav-link" href="#">ブログ</a>
+            <a class="nav-link" href="{{url_for('main.blog_maintenance')}}">ブログ</a>
           </li>
           <li class="nav-item px-2">
             <a class="nav-link" href="{{url_for('main.category_maintenance')}}">カテゴリ</a>
