--- a/09_flask_app/company_blog/templates/base.html
+++ b/09_flask_app/company_blog/templates/base.html
@@ -15,14 +15,14 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-5 fixed-top">
     <div class="container-fluid">
       <!-- 左にいる要素 -->
-      <a class="navbar-brand fs-3 fst-italic" href="#">Tori Inc.</a>
+      <a class="navbar-brand fs-3 fst-italic" href="{{ url_for('main.index') }}">Tori Inc.</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item px-2">
-            <a class="nav-link" href="#">ホーム</a>
+            <a class="nav-link" href="{{ url_for('main.index') }}">ホーム</a>
           </li>
           <li class="nav-item px-2">
             <a class="nav-link" href="#">会社情報</a>
