お問い合わせページの作成

--- a/09_flask_app/company_blog/templates/base.html
+++ b/09_flask_app/company_blog/templates/base.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="#">会社情報</a>
           </li>
           <li class="nav-item px-2">
-            <a class="nav-link" href="#">お問い合わせ</a>
+            <a class="nav-link" href="{{url_for('main.inquiry')}}">お問い合わせ</a>
           </li>
         </ul>
       </div>
@@ -42,7 +42,7 @@
             <a class="nav-link" href="{{url_for('main.category_maintenance')}}">カテゴリ</a>
           </li>
           <li class="nav-item px-2">
-            <a class="nav-link" href="#">お問い合わせ</a>
+            <a class="nav-link" href="{{url_for('main.inquiry_maintenance')}}">お問い合わせ</a>
           </li>
           <li class="nav-item px-2">
             <a class="nav-link" href="{{url_for('users.user_maintenance')}}">ユーザー</a>
