--- a/09_flask_app/company_blog/templates/users/user_maintenance.html
+++ b/09_flask_app/company_blog/templates/users/user_maintenance.html
@@ -30,36 +30,38 @@
       <div class="card-body">
         <h5 class="card-title">最新のユーザ</h5>
       </div>
-      <table class="table">
-        <thead>
-          <tr class="table-dark">
-            <th scope="col">ID</th>
-            <th scope="col">ユーザ名</th>
-            <th scope="col">メールアドレス</th>
-            <th scope="col">管理者</th>
-            <th scope="col">プログ投稿数</th>
-            <th scope="col">変更</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for user in users.items %}
-          <tr>
-            <td>{{ user.id }}</td>
-            <td>{{ user.username }}</td>
-            <td>{{ user.email }}</td>
-            <td>{{ user.administrator }}</td>
-            <td><a href="{{ url_for('users.user_posts', user_id=user.id) }}">
-              {{ user.count_posts(user.id) }}
-            </a></td>
-            <td>
-              {% if current_user.is_administrator() or current_user.id == user.id %}
-                <a href="{{ url_for('users.account', user_id=user.id) }}" class="btn btn-secondary">変更</a>
-              {% endif %}
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
+      <div class="table-responsive">
+        <table class="table table-striped text-nowrap">
+          <thead>
+            <tr class="table-dark">
+              <th scope="col">ID</th>
+              <th scope="col">ユーザ名</th>
+              <th scope="col">メールアドレス</th>
+              <th scope="col">管理者</th>
+              <th scope="col">プログ投稿数</th>
+              <th scope="col">変更</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for user in users.items %}
+            <tr>
+              <td>{{ user.id }}</td>
+              <td>{{ user.username | truncate(10) }}</td>
+              <td>{{ user.email | truncate(20) }}</td>
+              <td>{{ user.administrator }}</td>
+              <td><a href="{{ url_for('users.user_posts', user_id=user.id) }}">
+                {{ user.count_posts(user.id) }}
+              </a></td>
+              <td>
+                {% if current_user.is_administrator() or current_user.id == user.id %}
+                  <a href="{{ url_for('users.account', user_id=user.id) }}" class="btn btn-secondary">変更</a>
+                {% endif %}
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
     </div>
   </section>
 
