--- a/09_flask_app/company_blog/templates/base.html
+++ b/09_flask_app/company_blog/templates/base.html
@@ -8,6 +8,7 @@
   <script src="https://cdn.ckeditor.com/4.21.0/standard/ckeditor.js"></script>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="/static/図1.png">
   <title>Tori Inc.</title>
 </head>
 <body>
@@ -22,37 +23,37 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item px-2">
-            <a class="nav-link" href="{{ url_for('main.index') }}">ホーム</a>
+            <a class="nav-link {% if request.endpoint == 'main.index' %}active{% endif %}" href="{{ url_for('main.index') }}">ホーム</a>
           </li>
           <li class="nav-item px-2">
-            <a class="nav-link" href="#">会社情報</a>
+            <a class="nav-link {% if request.endpoint == 'main.info' %}active{% endif %}" href="{{ url_for('main.info') }}">会社情報</a>
           </li>
           <li class="nav-item px-2">
-            <a class="nav-link" href="{{url_for('main.inquiry')}}">お問い合わせ</a>
+            <a class="nav-link {% if request.endpoint == 'main.inquiry' %}active{% endif %}" href="{{url_for('main.inquiry')}}">お問い合わせ</a>
           </li>
         </ul>
       </div>
       <!-- 右にいる要素 -->
       <div class="collapse navbar-collapse justify-content-md-end" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item px-2">
-            <a class="nav-link" href="{{url_for('main.blog_maintenance')}}">ブログ</a>
-          </li>
-          <li class="nav-item px-2">
-            <a class="nav-link" href="{{url_for('main.category_maintenance')}}">カテゴリ</a>
-          </li>
-          <li class="nav-item px-2">
-            <a class="nav-link" href="{{url_for('main.inquiry_maintenance')}}">お問い合わせ</a>
-          </li>
-          <li class="nav-item px-2">
-            <a class="nav-link" href="{{url_for('users.user_maintenance')}}">ユーザー</a>
-          </li>
           {% if current_user.is_authenticated %}
+          <li class="nav-item px-2">
+            <a class="nav-link {% if request.endpoint == 'main.blog_maintenance' %}active{% endif %}" href="{{url_for('main.blog_maintenance')}}">ブログ</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link {% if request.endpoint == 'main.category_maintenance' %}active{% endif %}" href="{{url_for('main.category_maintenance')}}">カテゴリ</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link {% if request.endpoint == 'main.inquiry_maintenance' %}active{% endif %}" href="{{url_for('main.inquiry_maintenance')}}">お問い合わせ</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link {% if request.endpoint == 'users.user_maintenance' %}active{% endif %}" href="{{url_for('users.user_maintenance')}}">ユーザー</a>
+          </li>
           <li class="nav-item px-2">
             <a class="nav-link" href="{{url_for('users.logout')}}">ログアウト</a>
           </li>
           <li class="navbar-text px-2">
-            {{ current_user.username }}
+            {{ current_user.username | truncate(10) }}
           </li>
           {% endif %}
         </ul>
