--- a/09_flask_app/company_blog/templates/index.html
+++ b/09_flask_app/company_blog/templates/index.html
@@ -25,12 +25,12 @@
   <div class="container my-3">
     <div class="row mb-2">
       <!-- コンテンツ -->
-      <div class="col-8">
+      <div class="col-md-8">
         <!-- ブログ投稿 -->
         <section class="blog_post">
           <div class="row">
             {% for post in blog_posts.items %}
-            <div class="col-6 mb-4">
+            <div class="col-md-6 mb-4">
               <div class="card h-100">
                 <div class="card-body" style="max-height: 26rem;">
                   {% if post.featured_image %}
@@ -40,11 +40,11 @@
                   {% endif %}
                   <h3>
                     <a href="{{ url_for('main.blog_post', blog_post_id=post.id)}}" class="card-title text-decoration-none">
-                      <span class="fst-italic">{{ post.title }}</span>
+                      <span class="fst-italic">{{ post.title | truncate(14) }}</span>
                     </a>
                   </h3>
-                  <p>{{ post.date.strftime('%Y-%m-%d') }} by: {{ post.author.username }}</p>
-                  <p class="card-text">{{ post.summary }}</p>
+                  <p>{{ post.date.strftime('%Y-%m-%d') }} by: {{ post.author.username | truncate(10) }}</p>
+                  <p class="card-text">{{ post.summary | truncate(40) }}</p>
                   <a href="{{ url_for('main.blog_post', blog_post_id=post.id) }}" class="btn btn-dark">続きを読む...</a>
                 </div>
               </div>
@@ -82,7 +82,7 @@
                     {% if recent_post.featured_image %}
                       <img src="{{ url_for('static', filename='featured_image/' + recent_post.featured_image) }}" class="img-fluid" width="90" height="50">
                     {% endif %}
-                    <span class="ms-2">{{ recent_post.title }}</span>
+                    <span class="ms-2">{{ recent_post.title | truncate(14) }}</span>
                   </a>
                 </li>
                 <hr>
@@ -100,7 +100,7 @@
                 {% for blog_category in blog_categories %}
                 <li>
                   <a href="{{ url_for('main.category_search', blog_category_id=blog_category.id) }}" class="text-decoration-none">
-                    <span class="ms-2">{{ blog_category.category }}</span>
+                    <span class="ms-2">{{ blog_category.category | truncate(14) }}</span>
                   </a>
                 </li>
                 <hr>
