--- a/09_flask_app/company_blog/templates/inquiry_maintenance.html
+++ b/09_flask_app/company_blog/templates/inquiry_maintenance.html
@@ -17,32 +17,34 @@
       <div class="card-body">
         <h4 class="card-title">お問い合わせ</h4>
       </div>
-      <table class="table">
-        <thead>
-          <tr class="table-dark">
-            <th scope="col">ID</th>
-            <th scope="col">投稿者</th>
-            <th scope="col">メールアドレス</th>
-            <th scope="col">投稿日</th>
-            <th scope="col">タイトル</th>
-            <th scope="col">本文</th>
-            <th scope="col">詳細</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for inquiry_post in inquiry_posts.items %}
-          <tr>
-            <td>{{inquiry_post.id}}</td>
-            <td>{{inquiry_post.name}}</td>
-            <td>{{inquiry_post.email}}</td>
-            <td>{{inquiry_post.date.strftime('%Y/%m/%d')}}</td>
-            <td>{{inquiry_post.title | truncate(30)}}</td>
-            <td>{{inquiry_post.text | truncate(100)}}</td>
-            <td><a href="{{url_for('main.display_inquiry', inquiry_id=inquiry_post.id)}}" class="btn btn-secondary">詳細</a></td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
+      <div class="table-responsive">
+        <table class="table table-striped text-nowrap">
+          <thead>
+            <tr class="table-dark">
+              <th scope="col">ID</th>
+              <th scope="col">投稿者</th>
+              <th scope="col">メールアドレス</th>
+              <th scope="col">投稿日</th>
+              <th scope="col">タイトル</th>
+              <th scope="col">本文</th>
+              <th scope="col">詳細</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for inquiry_post in inquiry_posts.items %}
+            <tr>
+              <td>{{inquiry_post.id}}</td>
+              <td>{{inquiry_post.name | truncate(10)}}</td>
+              <td>{{inquiry_post.email | truncate(20)}}</td>
+              <td>{{inquiry_post.date.strftime('%Y/%m/%d')}}</td>
+              <td>{{inquiry_post.title | truncate(20)}}</td>
+              <td>{{inquiry_post.text | truncate(30)}}</td>
+              <td><a href="{{url_for('main.display_inquiry', inquiry_id=inquiry_post.id)}}" class="btn btn-secondary">詳細</a></td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
     </div>
   </section>
 
